--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,24 @@ body {
     color: #ffffff;
     margin: 0;
 }
+
+.nav-background {
+    background-color: #1d1919;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 2em auto 0;
+}
+
+.flex-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image-placeholder {
+    width: 500px;
+    height: 500px;
+    background-color: #1d1919;
+}
