--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap");
+
 body {
     margin: 0;
     color: #09001e;
+    font-family: "Roboto Mono", monospace;
 }
