hamburger menu fixes

--- a/src/components/HamburgerMenu/hamburgerMenu.css
+++ b/src/components/HamburgerMenu/hamburgerMenu.css
@@ -80,6 +80,8 @@
     transition: color 0.2s;
 }
 
-.bm-item:hover {
-    color: #ffffff;
+.active {
+    background: #a287af;
+    border-radius: 10px;
+    color: white;
 }
